[package]
name = "lrc-nom"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Simple zero-copy LRC parser wrote with nom"
homepage = "https://github.com/poly000/lrc-nom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
thiserror = "1.0.40"
